# sipxecs

sipXcommons/src/main/java/org/sipfoundry/commons/mongo/: MongoConstants.java
sipXconfig/: pubspec.yaml
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/common/: DaoUtils.java
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/commserver/imdb/: ReplicationManager.java  ReplicationManagerImpl.java  ReplicationTrigger.java
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/hoteling/: HotelingLocator.java  HotelingManager.java
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/paging/: PagingContextImpl.java  PagingFeatureContext.java  PagingFeatureContextImpl.java  paging.beans.xml
sipXconfig/neoconf/src/org/sipfoundry/sipxconfig/phone/: Phone.java  PhoneContextImpl.java
sipXconfig/neoconf/test/org/sipfoundry/sipxconfig/common/: CoreContextImplTestIntegration.java
sipXconfig/neoconf/test/org/sipfoundry/sipxconfig/phone/: PhoneTestIntegration.java
sipXconfig/web/context/WEB-INF/plugin/: InternalPlugins.html  InternalPlugins.properties
sipXconfig/web/src/org/sipfoundry/sipxconfig/site/skin/: layout.css
sipXopenfire/: .classpath  Makefile.am  common.am  configure.ac
sipXopenfire/config-plugin/: Makefile.am  sipxplugin.beans.xml
sipXopenfire/config-plugin/plugin/: ChatRoomMgmt.html  ChatRoomMgmt.page  ChatRoomMgmt.properties  ChatRoomMgmtFull.html  InstantMessagingAdmin.jwc  InstantMessagingPage.page  chat_room_mgmt.dart  sipxconfig.dart
sipXopenfire/config-plugin/plugin/component/: edit_room.css  edit_room.dart  edit_room.html  user_picker.css  user_picker.dart  user_picker.html  user_picker.jwc
sipXopenfire/config-plugin/plugin/controller/: RoomsController.dart  UserPickerController.dart
sipXopenfire/config-plugin/plugin/lib/: chat_room.dart
sipXopenfire/config-plugin/plugin/route/: rooms_route.dart
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/openfire/: OpenfireConfiguration.java  OpenfireImpl.java  OpenfireSettings.java
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/persist/: BaseChatRoomDao.java  ChatRoomDao.java  MongoChatRoomConstants.java  MongoChatRoomDao.java  SqlChatRoomDao.java  UserDao.java
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/: ChatRoomMgmt.java  IMFeatureHook.java  rooms.beans.xml
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/web/plugin/component/: UserPicker.java
sipXopenfire/config-plugin/src/org/sipfoundry/sipxconfig/web/rest/: AbstractChatRoomApi.java  ChatRoom.java  ChatRoomMgmtApi.java  ChatRoomsCountApi.java  ChatRoomsMgmtApi.java  IMUser.java  IMUsersApi.java
sipXopenfire/config-plugin/test/: Makefile.am
sipXopenfire/config-plugin/web/WEB-INF/: web.xml
